--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
+    "bootstrap-daterangepicker": "^3.1.0",
     "date-fns": "^2.19.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
-    "react-date-range": "^1.1.3",
+    "react-bootstrap": "^1.5.1",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
